Fix vertical spacing in all .cols

--- a/styles.css
+++ b/styles.css
@@ -64,12 +64,15 @@ h3 {
     line-height: 90%;
     text-align: left;
     text-transform: uppercase;
-    padding: 0;
+}
+.col h3 {
     margin-top: 34px;
+    margin-bottom: 0px;
 }
 .col-image img {
     height: 301px;
     width: 401px;
+    display: block;
 }
 a {
     text-decoration: none;
@@ -86,6 +89,8 @@ p {
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
+    margin-top: 14px;
+    margin-bottom: 0px;
 }
 .primary-button {
     color: #677D0F;
@@ -102,4 +107,7 @@ p {
 .primary-button:hover {
     color: #F5E5BD;
     background-color: #677D0F;
+}
+.col .primary-button {
+    margin-top: 24px;
 }
